Fixing BuildVersionDisplay parameter usage in the MSBuild action

--- a/.github/actions/msbuild/action.yml
+++ b/.github/actions/msbuild/action.yml
@@ -60,6 +60,8 @@ runs:
       working-directory: ${{ inputs.directory }}
       run: |
         $givenSwitches = @'
+            -p:BuildVersionDisplay_BuildText='${{ github.head_ref }}: ${{ github.sha }}'
+            -p:BuildVersionDisplay_BuildUrl='https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
             ${{ inputs.msbuild-switches }}
         '@
 
@@ -69,8 +71,6 @@ runs:
             TreatWarningsAsErrors = '${{ inputs.treat-warnings-as-errors }}'
             EnableCodeAnalysis = '${{ inputs.enable-code-analysis }}'
             Version = '${{ inputs.publish-version }}'
-            BuildVersionDisplay_BuildText = '#${{ github.sha }} (${{ github.head_ref }})'
-            BuildVersionDisplay_BuildUrl = 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
             Switches = $givenSwitches
         }
 
