Making the AfterDeploy maintenance in the deploy-orchard1-to-azure-app-service workflow environment-aware

--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -171,7 +171,7 @@ jobs:
             -WebAppName ${{ inputs.app-name }} `
             -SlotName ${{ inputs.slot-name }}
 
-      - name: Start StagingAfterDeploy Maintenance
+      - name: Start AfterDeploy Maintenance on the Destination Slot
         if: inputs.maintenance-host-name != ''
         run: |
           $maintenanceParameters = @{
@@ -179,7 +179,7 @@ jobs:
             UserName = '${{ secrets.MAINTENANCE_USER_NAME }}'
             Password = '${{ secrets.MAINTENANCE_PASSWORD }}'
             BatchSize = '${{ inputs.maintenance-batch-size }}'
-            MaintenanceName = 'StagingAfterDeploy'
+            MaintenanceName = '${{ inputs.slot-name }}AfterDeploy'
           }
           Start-Maintenance @maintenanceParameters
 
