I wanted to test the error in the deployed app, but it says "Now I'm not doing it!"

--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -132,6 +132,7 @@ jobs:
         run: Compress-Archive -Path 'build\Precompiled' -CompressionLevel 'Fastest' -DestinationPath 'Precompiled.zip'
 
       - name: Upload Precompiled App as Artifact
+        if: false
         uses: actions/upload-artifact@v3.1.1
         with:
           name: DotNest.Tenants-${{ github.sha }}
