Adding more contextual information to the payload in the AI release annotation workflow

--- a/.github/actions/add-azure-application-insights-release-annotation/action.yml
+++ b/.github/actions/add-azure-application-insights-release-annotation/action.yml
@@ -31,10 +31,12 @@ runs:
       run: |
         $params = @{
             ApplicationInsightsResourceId = $Env:AI_RESOURCE_ID
-            ReleaseName = $Env:RELEASE_NAME ? $Env:RELEASE_NAME : 'Run #${{ github.run_number }}'
+            ReleaseName = $Env:RELEASE_NAME ? $Env:RELEASE_NAME : 'Run #${{ github.run_number }} (GitHub Actions)'
             ReleaseProperties = @{
               'Workflow' = '${{ github.workflow }}'
+              'Commit branch' = '${{ github.head_ref }}'
               'Commit SHA' = '${{ github.sha }}'
+              'Run URL' = 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
             }
         }
         Add-ReleaseAnnotation @params
