--- a/.github/workflows/swap-azure-web-app-slots.yml
+++ b/.github/workflows/swap-azure-web-app-slots.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Add Azure Application Insights Release Annotation
         uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
         with:
+          release-name: 'Swap #${{ github.run_number }} from ${{ inputs.source-slot-name }} (GitHub Actions)'
           application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
       - name: Test Destination Web App Slot
