--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -116,6 +116,12 @@ on:
           PowerShell string array with the name of the included folder(s), e.g. '@("NotRecipeJournal")' or
           '@("NotRecipeJournal", "CoolFolder")'. The parameter must be a PowerShell string array. When a not empty
           PowerShell string array is provided, "folder-exclude-list" is not taken into consideration.
+      application-insights-resource-id:
+        required: false
+        type: string
+        description: >
+          ID of the Application Insights resource that the release annotation for the reset should be added to.
+          This can e.g. be looked up on the Azure Portal under the given AI resource's Overview page -> JSON View.
       maintenance-host-name:
         required: false
         type: string
@@ -194,6 +200,13 @@ jobs:
             -UserSlotName ${{ inputs.source-slot-name }} `
             -DatabaseConnectionStringName ${{ inputs.master-database-connection-string-name }} `
             -UserConnectionStringName ${{ inputs.database-connection-string-name }}
+
+      - name: Add Azure Application Insights Release Annotation
+        if: ${{ inputs.application-insights-resource-id != '' }}
+        uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
+        with:
+          release-name: 'Reset #${{ github.run_number }} from ${{ inputs.source-slot-name }} to ${{ inputs.destination-slot-name }}'
+          application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
       - name: Start Web App Slot
         run: |
