Add missing step title

--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -198,7 +198,7 @@ jobs:
       - name: Enable Node.js corepack
         uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
 
-      - name: 
+      - name: Print configuration summary
         uses: Lombiq/GitHub-Actions/.github/actions/print-config-summary@issue/OSOE-593
 
       - name: Build and Static Code Analysis
