--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -199,45 +199,49 @@ jobs:
         uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
 
       - name: Print configuration summary
-        uses: Lombiq/GitHub-Actions/.github/actions/print-config-summary@issue/OSOE-593
+        shell: pwsh
+        run: |
+          "dotnet: $(dotnet --version)" >> $GITHUB_STEP_SUMMARY
+          "node  : $(node -v)" >> $GITHUB_STEP_SUMMARY
+          "pnpm  : $(pnpm -v)" >> $GITHUB_STEP_SUMMARY
 
-      - name: Build and Static Code Analysis
-        uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@dev
-        with:
-          directory: ${{ inputs.build-directory }}
-          configuration: ${{ inputs.build-configuration}}
-          verbosity: ${{ inputs.build-verbosity }}
-          enable-code-analysis: ${{ inputs.build-enable-code-analysis }}
-          enable-nuget-caching: ${{ inputs.build-enable-nuget-caching }}
-          enable-npm-caching: ${{ inputs.build-enable-npm-caching }}
-          cache-version: ${{ inputs.build-cache-version }}
-          solution-or-project-path: ${{ inputs.build-solution-path }}
-          create-binary-log: ${{ inputs.build-create-binary-log }}
-          binary-log-artifact-retention-days: ${{ inputs.build-binary-log-artifact-retention-days }}
-          warnings-as-errors: ${{ inputs.warnings-as-errors }}
-
-      - name: Set up SQL Server
-        if: inputs.set-up-sql-server == 'true'
-        uses: Lombiq/GitHub-Actions/.github/actions/setup-sql-server@dev
-
-      - name: Set up Azurite
-        if: inputs.set-up-azurite == 'true'
-        uses: Lombiq/GitHub-Actions/.github/actions/setup-azurite@dev
-        with:
-          location: ${{ inputs.build-directory}}
-
-      - name: Tests
-        if: inputs.test-disable == 'false'
-        uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
-        with:
-          blame-hang-timeout: ${{ inputs.blame-hang-timeout }}
-          build-directory: ${{ inputs.build-directory }}
-          solution-path: ${{ inputs.build-solution-path }}
-          test-verbosity: ${{ inputs.build-verbosity }}
-          test-filter: ${{ inputs.test-filter }}
-          ui-test-parallelism: ${{ inputs.ui-test-parallelism }}
-          ui-test-artifact-retention-days: ${{ inputs.ui-test-artifact-retention-days }}
-          xunit-max-parallel-threads: ${{ inputs.xunit-max-parallel-threads }}
+      #- name: Build and Static Code Analysis
+      #  uses: Lombiq/GitHub-Actions/.github/actions/build-dotnet@dev
+      #  with:
+      #    directory: ${{ inputs.build-directory }}
+      #    configuration: ${{ inputs.build-configuration}}
+      #    verbosity: ${{ inputs.build-verbosity }}
+      #    enable-code-analysis: ${{ inputs.build-enable-code-analysis }}
+      #    enable-nuget-caching: ${{ inputs.build-enable-nuget-caching }}
+      #    enable-npm-caching: ${{ inputs.build-enable-npm-caching }}
+      #    cache-version: ${{ inputs.build-cache-version }}
+      #    solution-or-project-path: ${{ inputs.build-solution-path }}
+      #    create-binary-log: ${{ inputs.build-create-binary-log }}
+      #    binary-log-artifact-retention-days: ${{ inputs.build-binary-log-artifact-retention-days }}
+      #    warnings-as-errors: ${{ inputs.warnings-as-errors }}
+      #
+      #- name: Set up SQL Server
+      #  if: inputs.set-up-sql-server == 'true'
+      #  uses: Lombiq/GitHub-Actions/.github/actions/setup-sql-server@dev
+      #
+      #- name: Set up Azurite
+      #  if: inputs.set-up-azurite == 'true'
+      #  uses: Lombiq/GitHub-Actions/.github/actions/setup-azurite@dev
+      #  with:
+      #    location: ${{ inputs.build-directory}}
+      #
+      #- name: Tests
+      #  if: inputs.test-disable == 'false'
+      #  uses: Lombiq/GitHub-Actions/.github/actions/test-dotnet@dev
+      #  with:
+      #    blame-hang-timeout: ${{ inputs.blame-hang-timeout }}
+      #    build-directory: ${{ inputs.build-directory }}
+      #    solution-path: ${{ inputs.build-solution-path }}
+      #    test-verbosity: ${{ inputs.build-verbosity }}
+      #    test-filter: ${{ inputs.test-filter }}
+      #    ui-test-parallelism: ${{ inputs.ui-test-parallelism }}
+      #    ui-test-artifact-retention-days: ${{ inputs.ui-test-artifact-retention-days }}
+      #    xunit-max-parallel-threads: ${{ inputs.xunit-max-parallel-threads }}
 
       - name: Cancel Workflow on Failure
         if: failure() && inputs.cancel-workflow-on-failure == 'true'
