Adding the maxCpuCount switch to the MSBuild action in the deploy-orchard1-to-azure-app-service workflow for testing

--- a/.github/workflows/deploy-orchard1-to-azure-app-service.yml
+++ b/.github/workflows/deploy-orchard1-to-azure-app-service.yml
@@ -130,6 +130,7 @@ jobs:
           treat-warnings-as-errors: ${{ inputs.build-treat-warnings-as-errors }}
           enable-code-analysis: ${{ inputs.build-enable-code-analysis }}
           msbuild-switches: |
+            -maxCpuCount
             /t:Precompiled
             /p:Solution=${{ inputs.build-directory }}\${{ inputs.solution-or-project-path }}
 
