--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -1,7 +1,7 @@
 name: Deploy to Azure App Service
 
 concurrency:
-    group: AzureDeployApp
+  group: AzureDeployApp
 
 on:
   workflow_call:
@@ -210,7 +210,7 @@ jobs:
       - name: Add Azure Application Insights Release Annotation
         uses: Lombiq/GitHub-Actions/.github/actions/add-azure-application-insights-release-annotation@dev
         with:
-          release-name: 'Deploy #${{ github.run_number }} to ${{ inputs.slot-name }}'
+          release-name: "Deploy #${{ github.run_number }} to ${{ inputs.slot-name }}"
           application-insights-resource-id: ${{ inputs.application-insights-resource-id }}
 
       - name: Start Web App Slot
