Use markdown headers

--- a/.github/actions/print-config-summary/action.yml
+++ b/.github/actions/print-config-summary/action.yml
@@ -7,6 +7,6 @@ runs:
     - name: Write configuration to summary
       shell: pwsh
       run: |
-        "dotnet: $(dotnet --version)" >> $GITHUB_STEP_SUMMARY
-        "node  : $(node -v)" >> $GITHUB_STEP_SUMMARY
-        "pnpm  : $(pnpm -v)" >> $GITHUB_STEP_SUMMARY
+        "### dotnet: $(dotnet --version)" >> $GITHUB_STEP_SUMMARY
+        "### node  : $(node -v)" >> $GITHUB_STEP_SUMMARY
+        "### pnpm  : $(pnpm -v)" >> $GITHUB_STEP_SUMMARY
