Trying default shell

--- a/.github/actions/print-config-summary/action.yml
+++ b/.github/actions/print-config-summary/action.yml
@@ -5,8 +5,10 @@ runs:
   using: "composite"
   steps:
     - name: Write configuration to summary
-      shell: pwsh
       run: |
-        "### dotnet: $(dotnet --version)" >> $GITHUB_STEP_SUMMARY
-        "### node  : $(node -v)" >> $GITHUB_STEP_SUMMARY
-        "### pnpm  : $(pnpm -v)" >> $GITHUB_STEP_SUMMARY
+        echo "### dotnet" >> $GITHUB_STEP_SUMMARY
+        dotnet --version >> $GITHUB_STEP_SUMMARY
+        echo "### node" >> $GITHUB_STEP_SUMMARY
+        node -v >> $GITHUB_STEP_SUMMARY
+        echo "### pnpm" >> $GITHUB_STEP_SUMMARY
+        pnpm -v >> $GITHUB_STEP_SUMMARY
