Add missing shell

--- a/.github/actions/print-config-summary/action.yml
+++ b/.github/actions/print-config-summary/action.yml
@@ -5,6 +5,7 @@ runs:
   using: "composite"
   steps:
     - name: Write configuration to summary
+      shell: bash
       run: |
         echo "### dotnet" >> $GITHUB_STEP_SUMMARY
         dotnet --version >> $GITHUB_STEP_SUMMARY
