Don't print the config summary in case the workflow is canceled by other jobs
Co-authored-by: József Horváth <jozsef.horvath@lombiq.com>

--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -214,7 +214,7 @@ jobs:
           warnings-as-errors: ${{ inputs.warnings-as-errors }}
 
       - name: Print configuration summary
-        if: always()
+        if: success() || failure()
         uses: Lombiq/GitHub-Actions/.github/actions/print-config-summary@issue/OSOE-593
 
       - name: Set up SQL Server
