Include env GITHUB_TOKEN.

--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -48,6 +48,8 @@ runs:
     - name: Setup NuGet Version
       id: setup
       shell: pwsh
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN_PAT }}
       run: |
         $source = @'
         ${{ inputs.source }}
